updated social links

--- a/index.html
+++ b/index.html
@@ -54,22 +54,24 @@
           <span class="hero-heading-subtitle">Marketing Manager</span>
           <div class="about-social-list">
             <div class="social-links-row">
-              <a href="#!">
+              <a href="https://github.com/cc-zahid" target="_blank" rel="noopener noreferrer">
                 <img src="img/social_icons/github.svg" alt="Link to GitHub account" />
               </a>
 
-              <a href="#!">
+              <a href="https://www.linkedin.com/in/zahid-khan-dev/" target="_blank" rel="noopener noreferrer">
                 <img src="img/social_icons/linkedin.svg" alt="Link to linkedin profile" />
               </a>
 
-              <a href="#!">
+              <a href="https://example.com" target="_blank" rel="noopener noreferrer">
                 <img src="img/social_icons/xing.svg" alt="Link to Xing profile" />
               </a>
 
-              <a href="#!">
+              <a href="https://www.facebook.com/zahid.shakeel.754" target="_blank" rel="noopener noreferrer">
                 <img src="img/social_icons/facebook.svg" alt="Link to facebook profile" /></a>
-              <a href="#!">
+
+              <a href="https://www.instagram.com/i.zahid_khan/" target="_blank" rel="noopener noreferrer">
                 <img src="img/social_icons/instagram.svg" alt="Link to instagram profile" /></a>
+
             </div>
           </div>
 
@@ -195,7 +197,7 @@
             <div class="project-mask">
               <div class="project-caption">
                 <h5 class="white">Finance Dashboard</h5>
-                <p class="white">UI/UX Design</p>
+                <p class="white">Marketing</p>
               </div>
             </div>
           </a>
@@ -207,7 +209,7 @@
             <div class="project-mask">
               <div class="project-caption">
                 <h5 class="white">Product design</h5>
-                <p class="white">UI/UX Design</p>
+                <p class="white">Project Management</p>
               </div>
             </div>
           </a>
@@ -219,7 +221,7 @@
             <div class="project-mask">
               <div class="project-caption">
                 <h5 class="white">Landing Page</h5>
-                <p class="white">UI/UX Design, Web Development</p>
+                <p class="white">App Development</p>
               </div>
             </div>
           </a>
@@ -243,7 +245,7 @@
             <div class="project-mask">
               <div class="project-caption">
                 <h5 class="white">Cosmic Sea</h5>
-                <p class="white">UI/UX Design, Web Development</p>
+                <p class="white">Game Development</p>
               </div>
             </div>
           </a>
@@ -255,7 +257,7 @@
             <div class="project-mask">
               <div class="project-caption">
                 <h5 class="white">eCommerce</h5>
-                <p class="white">Web Development</p>
+                <p class="white">Finance And Planning</p>
               </div>
             </div>
           </a>
@@ -317,22 +319,22 @@
     <div class="container">
       <div class="footer-row">
         <div class="social-links-row footer-social">
-          <a href="#!">
+          <a href="https://github.com/cc-zahid" target="_blank" rel="noopener noreferrer">
             <img src="img/social_icons/github.svg" alt="Link to GitHub account" />
           </a>
 
-          <a href="#!">
+          <a href="https://www.linkedin.com/in/zahid-khan-dev/" target="_blank" rel="noopener noreferrer">
             <img src="img/social_icons/linkedin.svg" alt="Link to linkedin profile" />
           </a>
 
-          <a href="#!">
+          <a href="https://example.com" target="_blank" rel="noopener noreferrer">
             <img src="img/social_icons/xing.svg" alt="Link to Xing profile" />
           </a>
 
-          <a href="#!">
+          <a href="https://www.facebook.com/zahid.shakeel.754" target="_blank" rel="noopener noreferrer">
             <img src="img/social_icons/facebook.svg" alt="Link to facebook profile" /></a>
 
-          <a href="#!">
+          <a href="https://www.instagram.com/i.zahid_khan/" target="_blank" rel="noopener noreferrer">
             <img src="img/social_icons/instagram.svg" alt="Link to instagram profile" /></a>
         </div>
 
