social icon for x platform added

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               </a>
 
               <a href="https://example.com" target="_blank" rel="noopener noreferrer">
-                <img src="img/social_icons/xing.svg" alt="Link to Xing profile" />
+                <img src="img/social_icons/x.svg" alt="Link to X profile" />
               </a>
 
               <a href="https://www.facebook.com/zahid.shakeel.754" target="_blank" rel="noopener noreferrer">
@@ -328,7 +328,7 @@
           </a>
 
           <a href="https://example.com" target="_blank" rel="noopener noreferrer">
-            <img src="img/social_icons/xing.svg" alt="Link to Xing profile" />
+            <img src="img/social_icons/x.svg" alt="Link to X profile" />
           </a>
 
           <a href="https://www.facebook.com/zahid.shakeel.754" target="_blank" rel="noopener noreferrer">
