added profile link for the x platform

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <img src="img/social_icons/linkedin.svg" alt="Link to linkedin profile" />
               </a>
 
-              <a href="https://example.com" target="_blank" rel="noopener noreferrer">
+              <a href="https://x.com/i_am_zahid_khan?s=21" target="_blank" rel="noopener noreferrer">
                 <img src="img/social_icons/x.svg" alt="Link to X profile" />
               </a>
 
@@ -327,7 +327,7 @@
             <img src="img/social_icons/linkedin.svg" alt="Link to linkedin profile" />
           </a>
 
-          <a href="https://example.com" target="_blank" rel="noopener noreferrer">
+          <a href="https://x.com/i_am_zahid_khan?s=21" target="_blank" rel="noopener noreferrer">
             <img src="img/social_icons/x.svg" alt="Link to X profile" />
           </a>
 
